# agno-notebooklm-example

./: Makefile  README.md
.cursor/skills/agno-db-migrations/: SKILL.md
.cursor/skills/agno-db-migrations/references/: ALEMBIC-SETUP.md
.cursor/skills/agno-ui/: SKILL.md
.cursor/skills/agno-ui/references/: COMPONENTS.md  STREAMING-API.md
.cursor/skills/railway-deployment/: SKILL.md
.cursor/skills/railway-deployment/references/: RAILWAY-SCRIPTS.md
backend/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml  railway.json  requirements.txt
backend/agents/: __init__.py  notebooklm_team.py
backend/api/: notebooks.py
backend/app/: instrumentation.py  main.py
backend/db/: __init__.py  session.py  url.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 1b4d4edb3c31_add_notebook_sessions_table.py  f19903bc4dd0_add_notebooks_table.py
backend/db/tables/: __init__.py  notebook.py  notebook_session.py
backend/scripts/: railway_up.sh
docs/: database-schema-and-sessions.md  deployment-guide.md  development-guide.md  how-to-add-new-endpoints.md  how-to-create-migrations.md  notebook-api-wrapping-agno.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  railway.json
frontend/src/: store.ts
frontend/src/api/: notebooks.ts  routes.ts
frontend/src/app/: page.tsx
frontend/src/components/notebooks/: DeleteNotebookDialog.tsx  NotebookFormDialog.tsx  NotebookHeader.tsx
frontend/src/hooks/: useAIStreamHandler.tsx
roadmap/: plan.md
(+3 files in other folders)
